Less padding on the footer, prevent scrollbars

--- a/css/isvalid.css
+++ b/css/isvalid.css
@@ -14,9 +14,9 @@ html {
 .footer {
 	font-family: "domus-titling-web",'Helvetica Neue', sans-serif;
 	/*text-align: center;*/
-	height: 30px;
-	margin-top: -30px;
-	padding: 8px 25px 8px 25px;
+	height: 38px;
+	margin-top: -38px;
+	padding: 0px 25px 0px 25px;
 }
 
 h1 {
